# pybatch

./: .gitignore  README.md  conftest.py  pyproject.toml  setup.py  tox.ini
doc/: Makefile
doc/examples/: config_tests.toml  gaia.toml  use_case.py
doc/source/: conf.py  index.rst  principles.rst
src/pybatch/: __init__.py  generic_protocol.py  genericjob.py  job_factory.py  jobmanager.py  parameter.py  tools.py
src/pybatch/plugins/local/: executor.py  job.py  plugin.py  pybatch_run.py
src/pybatch/plugins/nobatch/: job.py  plugin.py  pybatch_manager.py
src/pybatch/plugins/slurm/: job.py  plugin.py
src/pybatch/plugins/sshhost/: job.py  plugin.py  pybatch_manager.py
src/pybatch/protocols/: local.py  paramiko.py  ssh.py
tests/: conftest.py  job_cases.py  test_easy_job.py  test_local_job.py  test_nobatch.py  test_protocol_local.py  test_protocol_paramiko.py  test_protocol_ssh.py  test_remote_job.py  test_tools.py  test_version.py
tests/scripts/: array.py  array_ko.py  check_nodefile.py  code.py  error.py  hello.py  hello.sh  sleep.py
