[build-system]
requires = [
    "setuptools",
]
build-backend = "setuptools.build_meta"

[project]
name = "pybatch"
description = "Job management on remote computers."
readme = "README.md"
authors = [
    { name = "Ovidiu MIRCESCU", email = "ovidiu.mircescu@edf.fr" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
# python 3.9 needed for 'list[str]' syntaxe.
requires-python = ">=3.9"
dependencies = [
    "psutil"
]
version = "0.0"

[project.scripts]
pybatch_run = "pybatch.plugins.local.pybatch_run:main" # local batch manager

[project.entry-points."pybatch.plugins"]
local = "pybatch.plugins.local.plugin:Plugin"
slurm = "pybatch.plugins.slurm.plugin:Plugin"
nobatch = "pybatch.plugins.nobatch.plugin:Plugin"

[project.optional-dependencies]
paramiko = [
    "scp",
    "paramiko[gssapi]"
]
dev = [
    "tox >= 4.0",
]
docs = [
    "sphinx",
]
lint = [
    "ruff"
]
type = [
    "mypy"
]
test = [
    "pytest >= 7",
    "pytest-xdist",   # pytest -n auto
    "pytest-timeout", # pytest --timeout=300
    "pytest-html",    # html reports
    "pytest-sugar",   # progress bar & better look output
    "tomli;python_version<'3.11'"
]

[tool.ruff]
exclude = ["doc"]
line-length = 80
indent-width = 4

[tool.ruff.lint]
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
